add inputs and outputs descriptions

--- a/data_prep.ipynb
+++ b/data_prep.ipynb
@@ -13,9 +13,15 @@
    "source": [
     "The notebook aims to check the data and prepare input for predictive models.\n",
     "\n",
-    "- Data  \n",
-    "    - Features: Clinical features include cognitive test scores, underlying health conditions, demographic.... \n",
-    "    - Outcome: Pathology profiling includes amyloid, tangles, gpath, and NIA-Reagan scores."
+    "- Inputs:\n",
+    "    - Features (full_filled_year_dat_0303.txt): Clinical features include cognitive test scores, underlying health conditions, demographic.... \n",
+    "    - Targets (pathology_dat_0303.txt): Pathology profiling includes amyloid, tangles, gpath, and NIA-Reagan scores.\n",
+    "\n",
+    "- Outputs:\n",
+    "    - Prepare data from last visit for Elastic-Net\n",
+    "      - scaled_train_last.pkl, scaled_test_last.pkl\n",
+    "    - Prepare data from all visits for LSTM\n",
+    "      - scaled_train.pkl, scaled_test.pkl"
    ]
   },
   {
