--- a/elastic_net.ipynb
+++ b/elastic_net.ipynb
@@ -13,7 +13,22 @@
    "source": [
     "The notebook details an analysis using elastic net regression to predict brain pathology score (amyloid, tangles, gpath, and NIA-Reagan scores) in Alzheimer's disease based on clinical features (e.g. cognitive test scores, underlying health conditions, demographic) from last visit before deceased. \n",
     "\n",
-    "The analysis aims to create a baseline model for future comparisons with lstm model."
+    "The analysis aims to create a baseline model for future comparisons with lstm model.\n",
+    "\n",
+    "- Inputs:\n",
+    "    - scaled_train_last.pkl, scaled_test_last.pkl\n",
+    "\n",
+    "- Results: \n",
+    "    - predicit gpath:\n",
+    "      - the selected parameters:\n",
+    "        - alpha: 0.1\n",
+    "        - l1 ratio: 0.3\n",
+    "      - Testing $R^2$: 0.2619\n",
+    "    - predicit tangles:\n",
+    "        - the selected parameters:\n",
+    "          - alpha: 0.1\n",
+    "          - l1 ratio: 0.1\n",
+    "        - Testing $R^2$: 0.3854\n"
    ]
   },
   {
